<resources>
    <string name="app_name">GP-A209</string>
    <string name="exit_program_hint">Again according to exit the program</string>

    //start
    <string name="permissions_hint">Android requires location permissions to get the wifi name of the current connection.</string>

    //conn wifi
    <string name="conn_wifi_hint">Please make sure your device\n is powered up.\n\nYour phone is connected to…</string>
    <string name="login_with_amazon">Login With Amazon</string>
    <string name="login_hint">In order to set up your soother,\nhave your Amazon account login ready.\nClick the link below to login or\ncreate your free Amazon account.</string>
    <string name="problems">Experiencing any problems? *Give us your feedback*</string>
    <string name="maintenance">Under maintenance</string>
    <string name="ok">OK</string>
    <string name="next">NEXT</string>
    <string name="open_location">Location not opened,please open it.</string>
    <string name="no_wifi">You\'re not connected to the Internet.</string>
    <string name="unknown">Unknown</string>
    <string name="login_failed">Login failed, please try again.</string>
    <string name="log_wifi">Log Onto Your Home Wi-Fi</string>
    <string name="device_will_configured">Your device will be configured on\nthe following network:</string>
    <string name="eye_hint">Click the eye icon to check your password</string>
    <string name="wifi_no_password"><![CDATA[No password ? Click here to continue >]]></string>
    <string name="collect">Collect</string>
    <string name="add_device">ADD DEVICE</string>
    <string name="wifi_name">Wifi name</string>
    <string name="password_hint">Please enter the password</string>
    <string name="hint_title">Please connect to your home\nWi-Fi first</string>
    <string name="hint_msg">Please turn Wi-Fi on in your\nphone\'s settings.</string>
    <string name="config_wifi">wifi: %1$s</string>
    <string name="hint_device">Please long press the button to enter\nthe distribution network model.\nApp will configure wifi to :\n %1$s</string>
    <string name="hint_config_msg">After device into the\ndistribution network mode\nplease go next.</string>
    <string name="configure_result_failed_port">Device configure task failed, the device port could be used by other thread</string>
    <string name="configure_result_failed">Device configure task failed</string>
    <string name="configure_result_success">Device Wifi configuration successful</string>
    <string name="connected">Connected</string>
    <string name="new_name">New choose a name for your device</string>
    <string name="uploading">Uploading user data…</string>
    <string name="success">Collect Successful!</string>

    //control
    <string name="lullaby">Brahm’s Lullaby</string>
    <string name="greensleeves">Greensleeves</string>
    <string name="canon">Canon in D</string>
    <string name="waves">Waves</string>
    <string name="sound_off">Natural Sound Off</string>
    <string name="select_timer">Select Timer</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_off">Turn off</string>

    //device information
    <string name="information">INFORMATION</string>
    <string name="change_name">Change Name</string>
    <string name="change_name_big">CHANGE NAME</string>
    <string name="ware_version">Firmware Version</string>
    <string name="wifi_setup">Wi-Fi Setup</string>
    <string name="wifi_setup_big">Wi-Fi SETUP</string>
    <string name="rename_success">Rename Successful!</string>
    <string name="re_wifi">Wi-Fi Reset Successful!</string>

    //main
    <string name="device_list">DEVICE LIST</string>
    <string name="already_deleted">Delete failed.</string>
    <string name="try_again">Fail to connect to IotCore.Try again.</string>
    <string name="searching_device">Searching for devices in the same network…</string>
    <string name="no_device">Not found.But you can still control device.</string>
    <string name="retry">RETRY</string>

    //app information
    <string name="booklet">Instruction Booklet</string>
    <string name="about">About</string>
    <string name="enable_skill">Enable Nursery Skill</string>
    <string name="help">Skill Help</string>
    <string name="version">Version</string>
    <string name="account">Account</string>
    <string name="some_no_responding">Some of devices are not responding.</string>
    <string name="off_all">Turn Off All Device</string>
    <string name="on_all">Turn On All Device</string>
    <string name="change_name_hint">Device info was not obtained.\nYou may not be in the same network\nsegment as the device.\nPlease return to the device list\npage and connect to the same network\nthen try to pull down to\nrefresh the data</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_fail">Sign Out Failed.</string>
    <string name="sync_fail">Data sync failed.Please try again.</string>
    <string name="change_fail">Change Failed.</string>
    <string name="light">Light</string>
    <string name="alarm">Alarm</string>
    <string name="cycle_change">Cyclic change</string>

</resources>
